--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:            Kamil Slowikowski
-url:              https://www.slowkow.com
+url:              https://slowkow.com
 enforce_ssl:      slowkow.com
 encoding:         "utf-8"
 markdown:         kramdown
