--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ author:
   github:         slowkow
   linkedin:       kslowikowski
   scholar:        kMP4830AAAAJ
+  orcid:          0000-0002-2843-6370
 
 # Google Analytics
 analytics_id:     "UA-15531613-2"
