--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ enableEmoji = true
     startLevel = 1
   [markup.highlight]
     codeFences = true
-    guessSyntax = true
+    guessSyntax = false
     hl_Lines = ""
     lineNoStart = 1
     lineNos = false
@@ -44,11 +44,11 @@ enableEmoji = true
   description = "Notes about bioinformatics."
   cv = "Slowikowski-CV-2019-06-22.pdf"
 
-  # options for highlight.js (version, additional languages, and theme)
-  highlightjsVersion = "9.12.0"
-  highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
-  highlightjsLang = ["r", "yaml"]
-  #highlightjsTheme = "github"
+  ## options for highlight.js (version, additional languages, and theme)
+  #highlightjsVersion = "9.12.0"
+  #highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
+  #highlightjsLang = ["r", "yaml"]
+  ##highlightjsTheme = "github"
 
   MathJaxCDN = "//cdnjs.cloudflare.com/ajax/libs"
   MathJaxVersion = "2.7.5"
