--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,11 @@ enableEmoji = true
     title = "Notes"
     url = "/notes/"
     weight = 4
+  [[menu.main]]
+    name = "Publications"
+    title = "Publications"
+    url = "/publications/"
+    weight = 2
 
 [markup]
   [markup.tableOfContents]
